Correct footer text.

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,6 +23,6 @@
     {% block body %}{% endblock %}
   </div>
   <footer>
-    &copy; Copyright 2018 by Artem Malyshev,,,.
+    &copy; Copyright 2018 by Artem Malyshev.
   </footer>
 </body>
