--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,29 +1,34 @@
 <!doctype html>
-<meta charset="utf-8">
-<link rel="stylesheet" href="{{ '/static/style.css'|url }}">
-<title>{% block title %}Welcome{% endblock %} — dry-python.org</title>
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="{{ '/static/style.css'|url }}">
+    <title>{% block title %}Welcome{% endblock %} — dry-python.org</title>
+</head>
 <body>
-  <header>
-    <h1>dry-python.org</h1>
-    <nav>
-      <ul class="nav navbar-nav">
-        <li{% if this._path == '/' %} class="active"{% endif
-          %}><a href="{{ '/'|url }}">Welcome</a></li>
-        {% for href, title in [
-          ['/projects', 'Projects'],
-          ['/about', 'About'],
-          ['/talks', 'Talks']
-        ] %}
-          <li{% if this.is_child_of(href) %} class="active"{% endif
-            %}><a href="{{ href|url }}">{{ title }}</a></li>
-        {% endfor %}
-      </ul>
-    </nav>
-  </header>
-  <div class="page">
-    {% block body %}{% endblock %}
-  </div>
-  <footer>
-    &copy; Copyright 2018 by Artem Malyshev.
-  </footer>
+    <header>
+        <h1>dry-python.org</h1>
+        <nav>
+            <ul class="nav navbar-nav">
+                <li{% if this._path == '/' %} class="active"{% endif %}>
+                    <a href="{{ '/'|url }}">Welcome</a>
+                </li>
+                {% for href, title in [
+                    ['/projects', 'Projects'],
+                    ['/about', 'About'],
+                    ['/talks', 'Talks']
+                ] %}
+                    <li{% if this.is_child_of(href) %} class="active"{% endif %}>
+                        <a href="{{ href|url }}">{{ title }}</a>
+                    </li>
+                {% endfor %}
+            </ul>
+        </nav>
+    </header>
+    <div class="page">
+        {% block body %}
+        {% endblock %}
+    </div>
+    <footer>
+        &copy; Copyright 2018 by Artem Malyshev.
+    </footer>
 </body>
