--- a/templates/page.html
+++ b/templates/page.html
@@ -1,6 +1,8 @@
 {% extends "layout.html" %}
-{% block title %}{{ this.title }}{% endblock %}
+{% block title %}
+    {{ this.title }}
+{% endblock %}
 {% block body %}
-  <h2>{{ this.title }}</h2>
-  {{ this.body }}
+    <h2>{{ this.title }}</h2>
+    {{ this.body }}
 {% endblock %}
