--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,19 +6,14 @@
 </head>
 <body>
     <header>
-        <h1>dry-python.org</h1>
         <nav>
             <ul class="nav navbar-nav">
-                <li{% if this._path == '/' %} class="active"{% endif %}>
-                    <a href="{{ '/'|url }}">Welcome</a>
+                <li>
+                    <a href="{{ site.get('/')|url }}">dry-python.org</a>
                 </li>
-                {% for href, title in [
-                    ['/projects', 'Projects'],
-                    ['/about', 'About'],
-                    ['/talks', 'Talks']
-                ] %}
-                    <li{% if this.is_child_of(href) %} class="active"{% endif %}>
-                        <a href="{{ href|url }}">{{ title }}</a>
+                {% for page in site.get('/').children %}
+                    <li>
+                        <a href="{{ page|url }}">{{ page.title }}</a>
                     </li>
                 {% endfor %}
             </ul>
