Fix first slide.

--- a/slides/index.pug
+++ b/slides/index.pug
@@ -7,14 +7,16 @@ html
     meta(name="apple-mobile-web-app-capable" content="yes")
     meta(name="apple-mobile-web-app-status-bar-style" content="black-translucent")
     meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no")
-    title Test
+    title Readability matters
   body
     .reveal
       .slides
         section
-          h1 Dry Python
-          h2 Artem Malyshev
-          h3 @proofit404
+          h1 Readability matters
+          h2
+            a(href="https://dry-python.org/").
+              dry-python.org
+          h4 Artem Malyshev
         section
           h2 BIO
           ul
