Add quote about crap code.

--- a/slides/index.pug
+++ b/slides/index.pug
@@ -54,7 +54,9 @@ html
           p looks like one sentence
           p you need to "learn and interpret" your code
         section
-          h2 Picture steakers on the way wont help if your code is crap
+          blockquote
+            p If your code is crap, stickies on the wall won't help. #[a(href="https://twitter.com/henrikkniberg") @HenrikKniberg]
+            img(src="https://pbs.twimg.com/media/DZ4-WusUQAAdJES.jpg")
         section
           h2 This problems are framework agnostic, language agnostic and
           p even does not relate to programming at all
