Correct Pug layout.

--- a/slides/index.pug
+++ b/slides/index.pug
@@ -55,7 +55,9 @@ html
           p you need to "learn and interpret" your code
         section
           blockquote
-            p If your code is crap, stickies on the wall won't help. #[a(href="https://twitter.com/henrikkniberg") @HenrikKniberg]
+            p If your code is crap, stickies on the wall won't help.
+              a(href="https://twitter.com/henrikkniberg").
+                @HenrikKniberg
             img(src="https://pbs.twimg.com/media/DZ4-WusUQAAdJES.jpg")
         section
           h2 This problems are framework agnostic, language agnostic and
@@ -99,7 +101,7 @@ html
           h2 Real life
           pre
             code.
-              Code without stories with control flow and wariables...
+              Code without stories with control flow and variables...
         section
           h2 Dry Python
           img(src='https://raw.githubusercontent.com/dry-python/brand/master/logo/dry-python.png')
