Build main site styles with Webpack.

--- a/slides/index.pug
+++ b/slides/index.pug
@@ -157,3 +157,4 @@ html
         section
           h2 Dependencies
           p a way to integrate stories into existed frameworks without boilerplate
+//- FIXME: Webpack "styles" bundle should not be included in this template.
