--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,30 +1,30 @@
 <!doctype html>
 <head>
-    <meta charset="utf-8">
-    <title>{% block title %}{% endblock %} | dry-python.org</title>
+  <meta charset="utf-8">
+  <title>{% block title %}{% endblock %} | dry-python.org</title>
+  <link rel="stylesheet" href="{{ '/static/slides/styles.css'|asseturl }}">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li>
-                    <a href="{{ site.get('/')|url }}">dry-python.org</a>
-                </li>
-                {% for page in site.get('/').children %}
-                    <li>
-                        <a href="{{ page|url }}">{{ page.title }}</a>
-                    </li>
-                {% endfor %}
-            </ul>
-        </nav>
-    </header>
-    <div class="page">
-        {% block body %}
-        {% endblock %}
-    </div>
-    <footer>
-        &copy; Copyright 2018 by Artem Malyshev.
-    </footer>
-    <!-- FIXME: Use MiniCssExtractPlugin Webpack plugin. -->
-    <script type="text/javascript" src="{{ '/static/slides/styles.js'|asseturl }}"></script>
+  <header>
+    <nav>
+      <ul>
+        <li>
+          <a href="{{ site.get('/')|url }}">dry-python.org</a>
+        </li>
+        {% for page in site.get('/').children %}
+          <li>
+            <a href="{{ page|url }}">{{ page.title }}</a>
+          </li>
+        {% endfor %}
+      </ul>
+    </nav>
+  </header>
+  <div class="page">
+    {% block body %}
+    {% endblock %}
+  </div>
+  <footer>
+    &copy; Copyright 2018 by Artem Malyshev.
+  </footer>
+  <script src="{{ '/static/slides/styles.js'|asseturl }}"></script>
 </body>
