--- a/templates/macros/pagination.html
+++ b/templates/macros/pagination.html
@@ -1,15 +1,15 @@
 {% macro render_pagination(pagination) %}
-  <div class="pagination">
+  <div>
     {% if pagination.has_prev %}
       <a href="{{ pagination.prev|url }}">&laquo; Previous</a>
     {% else %}
-      <span class="disabled">&laquo; Previous</span>
+      <span>&laquo; Previous</span>
     {% endif %}
     | {{ pagination.page }} |
     {% if pagination.has_next %}
       <a href="{{ pagination.next|url }}">Next &raquo;</a>
     {% else %}
-      <span class="disabled">Next &raquo;</span>
+      <span>Next &raquo;</span>
     {% endif %}
   </div>
 {% endmacro %}
