Setup Lektor markdown highlighter plugin.

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,6 +3,7 @@
   <meta charset="utf-8">
   <title>{% block title %}{% endblock %} | dry-python.org</title>
   <link rel="stylesheet" href="{{ '/static/slides/styles.css'|asseturl }}">
+  <link rel="stylesheet" href="{{ get_pygments_stylesheet()|url }}">
 </head>
 <body>
   <header>
