Download external resources.

--- a/slides/index.pug
+++ b/slides/index.pug
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    meta(charset='utf-8')
+    meta(charset="utf-8")
     meta(name="description" content="Dry-Python")
     meta(name="author" content="Artem Malyshev")
     meta(name="apple-mobile-web-app-capable" content="yes")
@@ -58,7 +58,7 @@ html
             p If your code is crap, stickies on the wall won't help.
             a(href="https://twitter.com/henrikkniberg").
               @HenrikKniberg
-            img(src="https://pbs.twimg.com/media/DZ4-WusUQAAdJES.jpg")
+            img(src=require("./pics/stickers-on-the-wall.jpg"))
         section
           h2 This problems are framework agnostic, language agnostic and
           p even does not relate to programming at all
@@ -104,7 +104,7 @@ html
               Code without stories with control flow and variables...
         section
           h2 Dry Python
-          img(src='https://raw.githubusercontent.com/dry-python/brand/master/logo/dry-python.png')
+          img(src="https://raw.githubusercontent.com/dry-python/brand/master/logo/dry-python.png")
         section
           h2 Stories
           pre
