--- a/slides/index.pug
+++ b/slides/index.pug
@@ -153,7 +153,15 @@ html
         section
           h2 Picture of Py.Test report
         section
+          h2 Picture of Debug Toolbar repert
+        section
           h2 Picture of Sentry reporter
         section
           h2 Dependencies
           p a way to integrate stories into existed frameworks without boilerplate
+        section
+          h2 Get in touch
+          ul
+            li Site
+            li Twitter
+            li Github
