Add picture of the debug toolbar integration.

--- a/slides/index.pug
+++ b/slides/index.pug
@@ -153,7 +153,8 @@ html
         section
           h2 Picture of Py.Test report
         section
-          h2 Picture of Debug Toolbar repert
+          h2 Debug Toolbar
+          img(src=require("./pics/debug-toolbar.png"))
         section
           h2 Picture of Sentry reporter
         section
