Add picture of the sentry integration.

--- a/slides/index.pug
+++ b/slides/index.pug
@@ -156,7 +156,8 @@ html
           h2 Debug Toolbar
           img(src=require("./pics/debug-toolbar.png"))
         section
-          h2 Picture of Sentry reporter
+          h2 Sentry
+          img(src=require("./pics/sentry.png"))
         section
           h2 Dependencies
           p a way to integrate stories into existed frameworks without boilerplate
