Add picture of the pytest integration.

--- a/slides/index.pug
+++ b/slides/index.pug
@@ -151,7 +151,8 @@ html
         section
           h2 Picture of the annotated context
         section
-          h2 Picture of Py.Test report
+          h2 Py.Test
+          img(src=require("./pics/pytest.png"))
         section
           h2 Debug Toolbar
           img(src=require("./pics/debug-toolbar.png"))
