Change slides theme.

--- a/slides/index.pug
+++ b/slides/index.pug
@@ -58,7 +58,7 @@ html
             p If your code is crap, stickies on the wall won't help.
             a(href="https://twitter.com/henrikkniberg").
               @HenrikKniberg
-            img(src=require("./pics/stickers-on-the-wall.jpg"))
+            img(src=require("./pics/stickers-on-the-wall.jpg")).plain
         section
           h2 This problems are framework agnostic, language agnostic and
           p even does not relate to programming at all
@@ -105,7 +105,7 @@ html
         section
           h2 Dry Python
           p This is a set of libraries aimed to improve architecture and code design
-          img(src="https://raw.githubusercontent.com/dry-python/brand/master/logo/dry-python.png")
+          img(src="https://raw.githubusercontent.com/dry-python/brand/master/logo/dry-python.png").plain
         section
           h2 Stories
           pre
