Add links to the slides.

--- a/slides/index.pug
+++ b/slides/index.pug
@@ -165,6 +165,9 @@ html
         section
           h2 Get in touch
           ul
-            li Site
-            li Twitter
-            li Github
+            li
+              a(href="https://dry-python.org/") Website
+            li
+              a(href="https://twitter.com/dry_py") Twitter
+            li
+              a(href="https://github.com/dry-python") Github
