Add background slides.

--- a/slides/index.pug
+++ b/slides/index.pug
@@ -23,13 +23,10 @@ html
             li 5 years experience in Python
             li Django Channels 1.0
             li Dry Python
-        section
-          p picture from the Office Space
-          p enterprise company quick story
-          p code base like a house of the serial killer
-        section
-          p picture from the Silicon Valley
-          p startup company quick story
+        section(data-background-image=require("./pics/enterprise.jpg") data-background-size="contain")
+          br
+        section(data-background-image=require("./pics/startup.jpg") data-background-size="contain")
+          br
         section
           h2 Common problems
           ul
