Add intro slide.

--- a/slides/index.pug
+++ b/slides/index.pug
@@ -23,6 +23,13 @@ html
             li 5 years experience in Python
             li Django Channels 1.0
             li Dry Python
+        section
+          h2 Codebase problems
+          ol
+            li.fragment Fragile
+            li.fragment Time-consuming
+            li.fragment Framework independent
+            li.fragment Let's consider WEB for simplicity
         section(data-background-image=require("./pics/enterprise.jpg") data-background-size="contain")
           br
         section(data-background-image=require("./pics/startup.jpg") data-background-size="contain")
@@ -33,9 +40,6 @@ html
             li Ad-hoc solutions
             li Mess in the code bases
             li No time to fix anything
-        section
-          h2 Picture of the dayly meeting with a lot of sleepy, tired developers
-          p quick chat "we have a problem"
         section
           h2 Micro framework problems
           p very long views
