Add method flowchart slide.

--- a/slides/index.pug
+++ b/slides/index.pug
@@ -46,6 +46,8 @@ html
             li.fragment You need method flowchart
             li.fragment Zig-zag in the traceback
             li.fragment Framework internals leak
+        section(data-background-image=require("./pics/method-flowchart.png") data-background-size="contain")
+          br
         section
           h2 Framework internals leak
           pre
