Code is all about pain.

--- a/slides/index.pug
+++ b/slides/index.pug
@@ -24,11 +24,10 @@ html
             li Django Channels 1.0
             li Dry Python
         section
-          h2 Codebase problems
+          h2 Code is all about...
+          p.fragment
+            b pain
           ol
-            li.fragment Fragile
-            li.fragment Hard to reason about
-            li.fragment Time-consuming
             li.fragment Framework independent
             li.fragment Let's consider WEB for simplicity
         section(data-background-image=require("./pics/startup.jpg") data-background-size="contain")
@@ -73,15 +72,11 @@ html
                               to=instance, **data)
                           related_manager.add(obj)
         section
-          h2 Common problems
-          ul
-            li Ad-hoc solutions
-            li Mess in the code bases
-            li No time to fix anything
-        section
-          h2 Feature request
-          p looks like one sentence
-          p you need to "learn and interpret" your code
+          h2 As a result code is...
+          ol
+            li.fragment Fragile
+            li.fragment Hard to reason about
+            li.fragment Time-consuming
         section
           blockquote
             p If your code is crap, stickies on the wall won't help.
