Add hell slide.

--- a/slides/index.pug
+++ b/slides/index.pug
@@ -77,24 +77,14 @@ html
             li.fragment Fragile
             li.fragment Hard to reason about
             li.fragment Time-consuming
+        section(data-background-image=require("./pics/hell.jpg") data-background-size="auto" data-background-position="top")
+          br
         section
           blockquote
             p If your code is crap, stickies on the wall won't help.
             a(href="https://twitter.com/henrikkniberg").
               @HenrikKniberg
             img(src=require("./pics/stickers-on-the-wall.jpg")).plain
-        section
-          h2 This problems are framework agnostic, language agnostic and
-          p even does not relate to programming at all
-        section
-          h2 this is hell picture
-        section
-          h2 the only sollution we have for this is to write a clever code
-        section
-          h2 the last time I saw it was...
-        section
-          h2 in the meeting room :)
-          p where we discuss every aspect of the behavior in terms of the business logic
         section
           h2 We describe it everything in the straightforward way
           h3 Renew subscription
