--- a/slides/index.pug
+++ b/slides/index.pug
@@ -87,7 +87,7 @@ html
             img(src=require("./pics/stickers-on-the-wall.jpg")).plain
         section
           h2 Dry Python
-          p This is a set of libraries aimed to improve architecture and code design
+          p It is a set of libraries aimed to improve architecture and code design
           img(src="https://raw.githubusercontent.com/dry-python/brand/master/logo/dry-python.png").plain
         section
           h2 Business objects
