Fix dependencies description in slides.

--- a/slides/index.pug
+++ b/slides/index.pug
@@ -155,8 +155,8 @@ html
         section(data-background-image=require("./pics/sentry.png") data-background-size="contain")
           br
         section
-          h2 Dependencies
-          p a way to integrate stories into existed frameworks without boilerplate
+          img(src="https://raw.githubusercontent.com/dry-python/brand/master/logo/dependencies.png").plain
+          p Boilerplate-free #[b stories] integration with different frameworks.
         section
           h2 Get in touch
           ul
