Change text in the welcome slide.

--- a/slides/index.pug
+++ b/slides/index.pug
@@ -24,11 +24,11 @@ html
             li Django Channels 1.0
             li Dry Python
         section
-          h2 Code is all about...
+          h2 Code is...
           p.fragment
-            b pain
+            b hard
           p.fragment
-            b and humiliation
+            b and frustrating
           ol
             li.fragment Framework independent
             li.fragment Let's consider WEB for simplicity
