Name the situation.

--- a/slides/index.pug
+++ b/slides/index.pug
@@ -33,6 +33,14 @@ html
             li.fragment Framework independent
             li.fragment Let's consider WEB for simplicity
         section(data-background-image=require("./pics/startup.jpg") data-background-size="contain")
+          h2(style="color: white; background-color: black") Startup
+          br
+          br
+          br
+          br
+          br
+          br
+          br
           br
         section
           h2 Micro framework
@@ -52,6 +60,14 @@ html
                 File "views.py", line 1027, in post
               ZeroDivisionError: division by zero
         section(data-background-image=require("./pics/enterprise.jpg") data-background-size="contain")
+          h2(style="color: white; background-color: black") Enterprise
+          br
+          br
+          br
+          br
+          br
+          br
+          br
           br
         section
           h2 Big framework
