Add service layer slide.

--- a/slides/index.pug
+++ b/slides/index.pug
@@ -102,6 +102,11 @@ html
               @HenrikKniberg
             img(src=require("./pics/stickers-on-the-wall.jpg")).plain
         section
+          h2 Service layer
+          p Defines an application's boundary with a layer of services that establishes a set of available operations and coordinates the application's response in each operation.
+          p
+            b by Randy Stafford
+        section
           h2 Dry Python
           p It is a set of libraries aimed to improve architecture and code design
           img(src="https://raw.githubusercontent.com/dry-python/brand/master/logo/dry-python.png").plain
