Add headers to integration plugins.

--- a/slides/index.pug
+++ b/slides/index.pug
@@ -168,11 +168,21 @@ html
                     # Set by Subscription.find_category
                   code = None         # Set by PromoCode.find_code
         section(data-background-image=require("./pics/pytest.png") data-background-size="contain")
-          br
+          h2(style="color: white") py.test
         section(data-background-image=require("./pics/debug-toolbar.png") data-background-size="contain")
+          h2 DEBUG TOOLBAR
+          br
+          br
+          br
+          br
+          br
+          br
+          br
+          br
+          br
           br
         section(data-background-image=require("./pics/sentry.png") data-background-size="contain")
-          br
+          h2 Sentry
         section
           img(src="https://raw.githubusercontent.com/dry-python/brand/master/logo/dependencies.png").plain
           p Boilerplate-free #[b stories] integration with different frameworks.
